[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/the_face.png" type="Texture" id=1]
[ext_resource path="res://src/Player.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.2671
height = 14.4964

[node name="Player" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
bullet_offset = 50

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShootCooldown" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="ShootCooldown" to="." method="_on_ShootCooldown_timeout"]
